--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -147,5 +147,33 @@
   "search_results_sort_low_to_high": "ລາຄາ: ຕ່ຳສຸດຫາສູງສຸດ",
   "search_results_sort_high_to_low": "ລາຄາ: ສູງສຸດຫາຕ່ຳສຸດ",
   "search_results_no_image": "ບໍ່ມີຮູບພາບ",
-  "search_results_no_products": "ບໍ່ພົບສິນຄ້າທີ່ກົງກັບຄໍາຄົ້ນຫາຂອງທ່ານ."
+  "search_results_no_products": "ບໍ່ພົບສິນຄ້າທີ່ກົງກັບຄໍາຄົ້ນຫາຂອງທ່ານ.",
+
+  "login_page_title": "ເຂົ້າສູ່ລະບົບ",
+  "login_email_username_label": "ອີເມວ ຫຼື ຊື່ຜູ້ໃຊ້",
+  "login_email_username_placeholder": "ອີເມວ ຫຼື ຊື່ຜູ້ໃຊ້",
+  "login_password_label": "ລະຫັດຜ່ານ",
+  "login_password_placeholder": "ລະຫັດຜ່ານ",
+  "login_button": "ເຂົ້າສູ່ລະບົບ",
+  "login_no_account_text": "ທ່ານຍັງບໍ່ມີບັນຊີ?",
+  "login_register_link": "ລົງທະບຽນ",
+  "login_success_message": "ເຂົ້າສູ່ລະບົບສຳເລັດ!",
+  "login_failed_message": "ເຂົ້າສູ່ລະບົບຜິດພາດ: {{error}}",
+  "login_alert_close_button": "ປິດ",
+
+  "register_page_title": "ສ້າງບັນຊີ",
+  "register_username_label": "ຊື່ຜູ້ໃຊ້",
+  "register_username_placeholder": "ໃສ່ຊື່ຜູ້ໃຊ້",
+  "register_name_label": "ຊື່ເຕັມ",
+  "register_name_placeholder": "ໃສ່ຊື່ເຕັມຂອງທ່ານ",
+  "register_email_label": "ອີເມວ",
+  "register_email_placeholder": "ໃສ່ທີ່ຢູ່ອີເມວຂອງທ່ານ",
+  "register_password_label": "ລະຫັດຜ່ານ",
+  "register_password_placeholder": "ລະຫັດຜ່ານ",
+  "register_button": "ລົງທະບຽນ",
+  "register_already_account_text": "ມີບັນຊີແລ້ວ?",
+  "register_login_link": "ເຂົ້າສູ່ລະບົບ",
+  "register_success_message": "ລົງທະບຽນສຳເລັດ! ກະລຸນາເຂົ້າສູ່ລະບົບ.",
+  "register_failed_message": "ລົງທະບຽນຜິດພາດ: {{error}}",
+  "register_alert_close_button": "ປິດ"
 }
