Enhance product retrieval and filtering in API and frontend: update server.js to support search functionality alongside category filtering in the products endpoint. Modify AdminProductManagement and related components to integrate search capabilities, improve localization with i18next, and enhance user experience with dynamic text rendering for various UI elements.

--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -16,6 +16,10 @@
   "loading_top_products": "ກຳລັງໂຫຼດສິນຄ້າເດັ່ນ...",
   "error_loading_top_products": "ໂຫຼດສິນຄ້າເດັ່ນບໍ່ສຳເລັດ.",
   "loading_categories": "ກຳລັງໂຫຼດໝວດໝູ່...",
+  "delete_button": "ລຶບ",
+  "deleting_button": "ກຳລັງລຶບ...",
+  "save_button": "ບັນທຶກ",
+  "saving_button": "ກຳລັງບັນທຶກ...",
 
   "category_page_not_found": "ບໍ່ພົບໝວດໝູ່.",
   "category_page_filters_title": "ຕົວກອງ",
@@ -175,5 +179,213 @@
   "register_login_link": "ເຂົ້າສູ່ລະບົບ",
   "register_success_message": "ລົງທະບຽນສຳເລັດ! ກະລຸນາເຂົ້າສູ່ລະບົບ.",
   "register_failed_message": "ລົງທະບຽນຜິດພາດ: {{error}}",
-  "register_alert_close_button": "ປິດ"
+  "register_alert_close_button": "ປິດ",
+
+  "admin_dashboard": {
+    "total_revenue": "ລາຍໄດ້ທັງໝົດ",
+    "total_orders": "ຄຳສັ່ງຊື້ທັງໝົດ",
+    "total_customers": "ລູກຄ້າທັງໝົດ",
+    "total_products": "ສິນຄ້າທັງໝົດ",
+    "pending_orders": "ລໍຖ້າດຳເນິນການ "
+  },
+
+  "admin_product_management": {
+    "fetch_error": "ບໍ່ສາມາດດຶງຂໍ້ມູນສິນຄ້າໄດ້.",
+    "add_error": "ເພີ່ມສິນຄ້າບໍ່ສຳເລັດ: {{error}}",
+    "update_error": "ອັບເດດສິນຄ້າບໍ່ສຳເລັດ: {{error}}",
+    "confirm_add": "ທ່ານແນ່ໃຈບໍວ່າຕ້ອງການເພີ່ມສິນຄ້ານີ້?",
+    "confirm_update": "ທ່ານແນ່ໃຈບໍວ່າຕ້ອງການອັບເດດສິນຄ້ານີ້?",
+    "confirm_delete": "ທ່ານແນ່ໃຈບໍວ່າຕ້ອງການລຶບສິນຄ້ານີ້?",
+    "delete_error": "ລຶບສິນຄ້າບໍ່ສຳເລັດ: {{error}}",
+    "uncategorized": "ບໍ່ມີໝວດໝູ່",
+    "loading": "ກຳລັງໂຫຼດສິນຄ້າ...",
+    "error": "ຂໍ້ຜິດພາດ: {{error}}",
+    "title": "ການຈັດການສິນຄ້າ",
+    "add_product_button": "ເພີ່ມສິນຄ້າໃໝ່",
+    "edit_product_title": "ແກ້ໄຂສິນຄ້າ",
+    "add_product_title": "ເພີ່ມສິນຄ້າໃໝ່",
+    "add_success": "ເພີ່ມສິນຄ້າສຳເລັດແລ້ວ!",
+    "update_success": "ອັບເດດສິນຄ້າສຳເລັດແລ້ວ!",
+    "form_name_label": "ຊື່",
+    "form_description_label": "ລາຍລະອຽດ",
+    "form_price_label": "ລາຄາ",
+    "form_stock_label": "ຈຳນວນ",
+    "form_category_label": "ໝວດໝູ່",
+    "form_image_label": "ຮູບພາບສິນຄ້າ",
+    "current_image": "ຮູບພາບປັດຈຸບັນ",
+    "update_product_button": "ອັບເດດສິນຄ້າ",
+    "cancel_button": "ຍົກເລີກ",
+    "search_placeholder": "ຄົ້ນຫາຕາມຊື່ສິນຄ້າ...",
+    "all_categories": "ທຸກໝວດໝູ່",
+    "product_list_title": "ລາຍການສິນຄ້າ",
+    "no_products_found": "ບໍ່ພົບສິນຄ້າ.",
+    "table_header_name": "ຊື່",
+    "table_header_price": "ລາຄາ",
+    "table_header_stock": "ຈຳນວນ",
+    "table_header_image": "ຮູບພາບ",
+    "table_header_actions": "ການກະທຳ",
+    "no_image": "ບໍ່ມີຮູບພາບ",
+    "edit_button": "ແກ້ໄຂ",
+    "delete_button": "ລຶບ",
+    "search_button": "ຄົ້ນຫາ"
+  },
+
+  "admin_category_management": {
+    "collapse": "ຫຍໍ້ລົງ",
+    "expand": "ຂະຫຍາຍອອກ",
+    "edit_button": "ແກ້ໄຂ",
+    "delete_button": "ລຶບ",
+    "image_upload_failed": "ອັບໂຫຼດຮູບພາບບໍ່ສຳເລັດ: {{error}}",
+    "update_failed": "ແກ້ໄຂໝວດໝູ່ບໍ່ສຳເລັດ: {{error}}",
+    "add_failed": "ເພີ່ມໝວດໝູ່ບໍ່ສຳເລັດ: {{error}}",
+    "delete_failed": "ລຶບໝວດໝູ່ບໍ່ສຳເລັດ: {{error}}",
+    "confirm_add": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການເພີ່ມໝວດໝູ່ນີ້?",
+    "confirm_update": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການແກ້ໄຂໝວດໝູ່ນີ້?",
+    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບໝວດໝູ່ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "loading": "ກຳລັງໂຫຼດໝວດໝູ່...",
+    "error": "ຂໍ້ຜິດພາດ: {{error}}",
+    "title": "ການຈັດການໝວດໝູ່",
+    "add_category_button": "ເພີ່ມໝວດໝູ່ໃໝ່",
+    "close_modal_aria": "ປິດ",
+    "edit_category_title": "ແກ້ໄຂໝວດໝູ່",
+    "add_category_title": "ເພີ່ມໝວດໝູ່ໃໝ່",
+    "edit_category_name_placeholder": "ແກ້ໄຂຊື່ໝວດໝູ່",
+    "new_category_name_placeholder": "ຊື່ໝວດໝູ່ໃໝ່",
+    "select_parent_category_option": "-- ເລືອກໝວດໝູ່ຫຼັກ --",
+    "category_image_label": "ຮູບພາບໝວດໝູ່",
+    "remove_image_button": "ລຶບຮູບພາບ",
+    "uploading_status": "ກຳລັງອັບໂຫຼດ...",
+    "update_category_button": "ອັບເດດໝວດໝູ່",
+    "cancel_button": "ຍົກເລີກ",
+    "categories_list_title": "ໝວດໝູ່",
+    "no_categories_found": "ບໍ່ພົບໝວດໝູ່."
+  },
+
+  "admin_order_management": {
+    "fetch_failed": "ດຶງຂໍ້ມູນຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
+    "update_status_failed": "ອັບເດດສະຖານະບໍ່ສຳເລັດ",
+    "delete_failed": "ລຶບຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
+    "fetch_details_failed": "ດຶງຂໍ້ມູນລາຍລະອຽດຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
+    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບຄຳສັ່ງຊື້ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "title": "ການຈັດການຄຳສັ່ງຊື້ສິນຄ້າ",
+    "filter_status_label": "ກັ່ນຕອງຕາມສະຖານະ:",
+    "all_statuses_option": "ທັງໝົດ",
+    "loading": "ກຳລັງໂຫຼດຄຳສັ່ງຊື້...",
+    "error": "{{error}}",
+    "no_orders_found": "ບໍ່ພົບຄຳສັ່ງຊື້.",
+    "table_header_order_id": "ລະຫັດຄຳສັ່ງຊື້",
+    "table_header_user": "ຜູ້ໃຊ້",
+    "table_header_status": "ສະຖານະ",
+    "table_header_created": "ວັນທີ",
+    "table_header_items": "ສິນຄ້າ",
+    "table_header_total": "ທັງໝົດ",
+    "table_header_payment": "ການຊໍາລະ",
+    "guest_user": "ແຂກ",
+    "saving_button": "ກຳລັງບັນທຶກ...",
+    "save_button": "ບັນທຶກ",
+    "not_specified": "ບໍ່ໄດ້ລະບຸ",
+    "view_button": "ເບິ່ງ",
+    "deleting_button": "ກຳລັງລຶບ...",
+    "delete_button": "ລຶບ",
+    "close_modal_aria": "ປິດ",
+    "order_details_title": "ລາຍລະອຽດຄຳສັ່ງຊື້ #{{orderId}}",
+    "loading_details": "ກຳລັງໂຫຼດລາຍລະອຽດ...",
+    "modal_error": "{{error}}",
+    "detail_user_label": "ຜູ້ໃຊ້",
+    "detail_status_label": "ສະຖານະ",
+    "detail_payment_type_label": "ປະເພດການຊໍາລະ",
+    "detail_created_label": "ວັນທີ",
+    "detail_shipping_label": "ຂໍ້ມູນການຈັດສົ່ງ",
+    "detail_items_label": "ສິນຄ້າ",
+    "no_items_found": "ບໍ່ມີສິນຄ້າ",
+    "detail_total_label": "ທັງໝົດ",
+    "detail_payment_proof_label": "ຫຼັກຖານການຊໍາລະ",
+    "payment_proof_alt": "ຫຼັກຖານການຊໍາລະ",
+    "no_image": "(ບໍ່ມີຮູບພາບ)"
+  },
+
+  "order_status_pending": "ລໍຖ້າ",
+  "order_status_paid": "ຊໍາລະແລ້ວ",
+  "order_status_shipped": "ກຳລັງຈັດສົ່ງ",
+  "order_status_completed": "ສຳເລັດ",
+  "order_status_cancelled": "ຍົກເລີກ",
+  "payment_type_cod": "ເກັບເງິນປາຍທາງ",
+  "payment_type_bank_transfer": "ຊຳລະຜ່ານທະນາຄານ",
+
+  "salesDashboard": {
+    "title": "ລາຍງານການຂາຍສິນຄ້າ",
+    "recentSales": "ການຂາຍຫຼ້າສຸດ (20 ອໍເດີລ່າສຸດ)",
+    "exportCSV": "ສົ່ງອອກ CSV",
+    "loadingOrders": "ກຳລັງໂຫຼດອໍເດີ...",
+    "error": "ເກີດຂໍ້ຜິດພາດ: {{error}}",
+    "noOrdersFound": "ບໍ່ພົບອໍເດີ.",
+    "orderId": "ລະຫັດອໍເດີ",
+    "user": "ຜູ້ໃຊ້",
+    "status": "ສະຖານະ",
+    "created": "ວັນທີ",
+    "items": "ລາຍການ",
+    "total": "ທັງໝົດ",
+    "payment": "ການຊຳລະ"
+  },
+
+  "customerManagement": {
+    "title": "ການຈັດການລູກຄ້າ",
+    "searchPlaceholder": "ຄົ້ນຫາຕາມຊື່ຜູ້ໃຊ້ ຫຼື ອີເມວ...",
+    "loadingCustomers": "ກຳລັງໂຫຼດລູກຄ້າ...",
+    "error": "ຜິດພາດ: {{error}}",
+    "noCustomersFound": "ບໍ່ພົບລູກຄ້າ.",
+    "Id": "ID",
+    "Name": "ຊື່",
+    "Username": "ຊື່ຜູ້ໃຊ້",
+    "Email": "ອີເມວ",
+    "Registered": "ລົງທະບຽນເມື່ອ",
+    "Status": "ສະຖານະ",
+    "Orders": "ຄຳສັ່ງຊື້",
+    "TotalSpent": "ຍອດໃຊ້ຈ່າຍທັງໝົດ",
+    "Created": "ວັນທີ",
+    "Actions": "ການກະທຳ",
+    "confirmDelete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບລູກຄ້ານີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "ordersFor": "ຄຳສັ່ງຊື້ຂອງ {{username}}",
+    "loadingOrdersModal": "ກຳລັງໂຫຼດຄຳສັ່ງຊື້...",
+    "errorLoadingOrdersModal": "{{error}}",
+    "noOrdersFoundForCustomer": "ບໍ່ພົບຄຳສັ່ງຊື້ສໍາລັບລູກຄ້ານີ້.",
+    "status": "ສະຖານະ",
+    "created": "ວັນທີ",
+    "items": "ຈຳນວນ",
+    "total": "ຍອດທັງໝົດ",
+    "payment": "ການຊຳລະ"
+  },
+
+  "salesAnalytic": {
+    "title": "ການວິເຄາະການຂາຍ",
+    "totalSalesLabel": "ຍອດຂາຍທັງໝົດ",
+    "groupByLabel": "ຈັດກຸ່ມຕາມ",
+    "startLabel": "ເລີ່ມຕົ້ນ",
+    "endLabel": "ສິ້ນສຸດ",
+    "loadingChart": "ກຳລັງໂຫຼດຕາຕະລາງ...",
+    "error": "ເກີດຂໍ້ຜິດພາດ: {{error}}",
+    "groupOption": {
+      "day": "ມື້",
+      "week": "ອາທິດ",
+      "month": "ເດືອນ",
+      "year": "ປີ"
+    }
+  },
+
+  "topSellingProducts": {
+    "title": "ສິນຄ້າຂາຍດີທີ່ສຸດ",
+    "loading": "ກຳລັງໂຫຼດ...",
+    "error": "ເກີດຂໍ້ຜິດພາດ: {{error}}",
+    "noData": "ບໍ່ມີຂໍ້ມູນ.",
+    "sold": "ຂາຍແລ້ວ"
+  },
+
+  "adminSidebar": {
+    "dashboardLink": "ໜ້າຫຼັກ",
+    "productsManagementLink": "ການຈັດການສິນຄ້າ",
+    "categoryManagementLink": "ການຈັດການໝວດໝູ່",
+    "ordersLink": "ການຈັດການການສັ່ງຊື້",
+    "salesLink": "ການຈັດການການຂາຍ",
+    "customerManagementLink": "ການຈັດການລູກຄ້າ"
+  }
 }
