--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -16,6 +16,10 @@
   "loading_top_products": "Loading top products...",
   "error_loading_top_products": "Failed to load top products.",
   "loading_categories": "Loading categories...",
+  "delete_button": "Delete",
+  "deleting_button": "Deleting...",
+  "save_button": "Save",
+  "saving_button": "Saving...",
 
   "category_page_not_found": "Category not found.",
   "category_page_filters_title": "Filters",
@@ -127,7 +131,7 @@
   "processing_order_message": "Processing your order...",
   "order_failed_message": "Order failed. Please try again.",
   "cash_on_delivery_option": "Cash",
-  "bank_transfer_option": "Bank transfer",
+  "bank_transfer_option": "Bank Transfer",
   "upload_payment_proof_label": "Upload Payment Proof",
 
   "product_details_loading": "Loading product details...",
@@ -173,5 +177,212 @@
   "register_login_link": "Login here",
   "register_success_message": "Registration successful! Please log in.",
   "register_failed_message": "Registration failed: {{error}}",
-  "register_alert_close_button": "Close"
+  "register_alert_close_button": "Close",
+
+  "admin_dashboard": {
+    "total_revenue": "Total Revenue",
+    "total_orders": "Total Orders",
+    "total_customers": "Total Customers",
+    "total_products": "Total Products",
+    "pending_orders": "Pending Orders"
+  },
+
+  "admin_product_management": {
+    "fetch_error": "Failed to fetch products.",
+    "add_error": "Failed to add product: {{error}}",
+    "update_error": "Failed to update product: {{error}}",
+    "confirm_add": "Are you sure you want to add this product?",
+    "confirm_update": "Are you sure you want to update this product?",
+    "confirm_delete": "Are you sure you want to delete this product?",
+    "delete_error": "Failed to delete product: {{error}}",
+    "uncategorized": "Uncategorized",
+    "loading": "Loading products...",
+    "error": "Error: {{error}}",
+    "title": "Product Management",
+    "add_product_button": "Add New Product",
+    "edit_product_title": "Edit Product",
+    "add_product_title": "Add New Product",
+    "add_success": "Product added successfully!",
+    "update_success": "Product updated successfully!",
+    "form_name_label": "Name",
+    "form_description_label": "Description",
+    "form_price_label": "Price",
+    "form_stock_label": "Stock Quantity",
+    "form_category_label": "Category",
+    "form_image_label": "Product Image",
+    "current_image": "Current Image",
+    "update_product_button": "Update Product",
+    "cancel_button": "Cancel",
+    "search_placeholder": "Search by product name...",
+    "all_categories": "All Categories",
+    "product_list_title": "Product List",
+    "no_products_found": "No products found.",
+    "table_header_name": "Name",
+    "table_header_price": "Price",
+    "table_header_stock": "Stock",
+    "table_header_image": "Image",
+    "table_header_actions": "Actions",
+    "no_image": "No Image",
+    "edit_button": "Edit",
+    "delete_button": "Delete",
+    "search_button": "Search"
+  },
+
+  "admin_category_management": {
+    "collapse": "Collapse",
+    "expand": "Expand",
+    "edit_button": "Edit",
+    "delete_button": "Delete",
+    "image_upload_failed": "Image upload failed: {{error}}",
+    "update_failed": "Failed to update category: {{error}}",
+    "add_failed": "Failed to add category: {{error}}",
+    "delete_failed": "Failed to delete category: {{error}}",
+    "confirm_add": "Are you sure you want to add this category?",
+    "confirm_update": "Are you sure you want to update this category?",
+    "confirm_delete": "Are you sure you want to delete this category? This action cannot be undone.",
+    "loading": "Loading categories...",
+    "error": "Error: {{error}}",
+    "title": "Category Management",
+    "add_category_button": "Add New Category",
+    "close_modal_aria": "Close",
+    "edit_category_title": "Edit Category",
+    "add_category_title": "Add New Category",
+    "edit_category_name_placeholder": "Edit Category Name",
+    "new_category_name_placeholder": "New Category Name",
+    "select_parent_category_option": "-- Select Parent Category --",
+    "category_image_label": "Category Image",
+    "remove_image_button": "Remove Image",
+    "uploading_status": "Uploading...",
+    "update_category_button": "Update Category",
+    "cancel_button": "Cancel",
+    "categories_list_title": "Categories",
+    "no_categories_found": "No categories found."
+  },
+
+  "admin_order_management": {
+    "fetch_failed": "Failed to fetch orders",
+    "update_status_failed": "Failed to update status",
+    "delete_failed": "Failed to delete order",
+    "fetch_details_failed": "Failed to fetch order details",
+    "confirm_delete": "Are you sure you want to delete this order? This cannot be undone.",
+    "title": "Order Management",
+    "filter_status_label": "Filter by Status:",
+    "all_statuses_option": "All",
+    "loading": "Loading orders...",
+    "error": "{{error}}",
+    "no_orders_found": "No orders found.",
+    "table_header_order_id": "Order ID",
+    "table_header_user": "User",
+    "table_header_status": "Status",
+    "table_header_created": "Created",
+    "table_header_items": "Items",
+    "table_header_total": "Total",
+    "table_header_payment": "Payment",
+    "guest_user": "Guest",
+    "saving_button": "Saving...",
+    "save_button": "Save",
+    "not_specified": "Not specified",
+    "view_button": "View",
+    "deleting_button": "Deleting...",
+    "delete_button": "Delete",
+    "close_modal_aria": "Close",
+    "order_details_title": "Order #{{orderId}}",
+    "loading_details": "Loading details...",
+    "modal_error": "{{error}}",
+    "detail_user_label": "User",
+    "detail_status_label": "Status",
+    "detail_payment_type_label": "Payment Type",
+    "detail_created_label": "Created",
+    "detail_shipping_label": "Shipping",
+    "detail_items_label": "Items",
+    "no_items_found": "No items",
+    "detail_total_label": "Total",
+    "detail_payment_proof_label": "Payment Proof",
+    "payment_proof_alt": "Payment Proof",
+    "no_image": "(No Image)"
+  },
+
+  "order_status_pending": "Pending",
+  "order_status_paid": "Paid",
+  "order_status_shipped": "Shipped",
+  "order_status_completed": "Completed",
+  "order_status_cancelled": "Cancelled",
+  "payment_type_cod": "Cod",
+  "payment_type_bank_transfer": "Bank Transfer",
+
+  "salesDashboard": {
+    "title": "Sales Dashboard",
+    "recentSales": "Recent Sales (Last 20 Orders)",
+    "exportCSV": "Export CSV",
+    "loadingOrders": "Loading orders...",
+    "error": "{{error}}",
+    "noOrdersFound": "No orders found.",
+    "orderId": "Order ID",
+    "user": "User",
+    "status": "Status",
+    "created": "Created",
+    "items": "Items",
+    "total": "Total",
+    "payment": "Payment"
+  },
+
+  "customerManagement": {
+    "title": "Customer Management",
+    "searchPlaceholder": "Search by username or email...",
+    "loadingCustomers": "Loading customers...",
+    "error": "Error: {{error}}",
+    "noCustomersFound": "No customers found.",
+    "Id": "ID",
+    "Name": "Name",
+    "Username": "Username",
+    "Email": "Email",
+    "Registered": "Registered",
+    "Status": "Status",
+    "Orders": "Orders",
+    "TotalSpent": "Total Spent",
+    "Actions": "Actions",
+    "confirmDelete": "Are you sure you want to delete this customer? This action cannot be undone.",
+    "ordersFor": "Orders for {{username}}",
+    "loadingOrdersModal": "Loading orders...",
+    "errorLoadingOrdersModal": "{{error}}",
+    "noOrdersFoundForCustomer": "No orders found for this customer.",
+    "status": "Status",
+    "created": "Date",
+    "items": "Items",
+    "total": "Total",
+    "payment": "Payment"
+  },
+
+  "salesAnalytic": {
+    "title": "Sales Analytic",
+    "totalSalesLabel": "Total Sales",
+    "groupByLabel": "Group by",
+    "startLabel": "Start",
+    "endLabel": "End",
+    "loadingChart": "Loading chart...",
+    "error": "{{error}}",
+    "groupOption": {
+      "day": "Day",
+      "week": "Week",
+      "month": "Month",
+      "year": "Year"
+    }
+  },
+
+  "topSellingProducts": {
+    "title": "Top Selling Products",
+    "loading": "Loading...",
+    "error": "error: {{error}}",
+    "noData": "No Data.",
+    "sold": "Sold"
+  },
+
+  "adminSidebar": {
+    "dashboardLink": "ແດຊບອດ",
+    "productsManagementLink": "Products Management",
+    "categoryManagementLink": "Categories Management",
+    "ordersLink": "Orders Management",
+    "salesLink": "Sales",
+    "customerManagementLink": "Customers Management"
+  }
 }
