Enhance product and cart management: update API to include stock quantity in product searches and cart retrieval, improve localization with new translations for stock-related messages, and implement stock checks in cart and product components to prevent over-ordering. Adjust UI to display stock status and improve user feedback on product availability.

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,5 +1,13 @@
 {
   "welcome": "Welcome to our application!",
+  "Home": "Home",
+  "Cart": "Cart",
+  "Checkout": "Checkout",
+  "Category": "Category",
+  "Products": "Products",
+  "profile": "Profile",
+  "my_orders": "My Orders",
+  "Order-confirmation": "Order Confirmation",
   "search_placeholder": "Search for products...",
   "login_link_text": "Login",
   "register_link_text": "Register",
@@ -22,6 +30,8 @@
   "saving_button": "Saving...",
   "remove_image_button": "Remove Image",
   "edit_button": "Edit",
+  "out_of_stock": "Out of Stock",
+  "stock_label": "Stock",
 
   "footer": {
     "contact_us": "Contact Us",
@@ -48,6 +58,8 @@
   "category_list_no_image": "No Image Available",
 
   "category_ແທັບເລັດ ແລະ ສະມາດໂຟນ": "Tablets-Smartphones",
+  "category_iPads": "iPads",
+  "category_Galaxy Tab": "Galaxy Tab",
   "category_Electronics": "Electronics",
   "category_ຄອມພິວເຕີ": "Computers",
   "category_ແລັບທອບ": "Laptops",
@@ -64,6 +76,22 @@
   "category_megadropdown_categories": "Categories",
   "category_megadropdown_no_subcategories": "No subcategories",
   "category_megadropdown_hover_prompt": "Hover a category to see subcategories",
+
+  "category_Samsung": "Samsung",
+  "category_Apple": "Apple",
+  "category_OPPO": "OPPO",
+  "category_VIVO": "VIVO",
+  "category_Xiaomi": "Xiaomi",
+  "category_Asus": "Asus",
+  "category_Sony": "Sony",
+  "category_LG": "LG",
+  "category_Panasonic": "Panasonic",
+  "category_Philips": "Philips",
+  "category_Dell": "Dell",
+  "category_HP": "HP",
+  "category_MSI": "MSI",
+  "category_Lenovo": "Lenovo",
+  "category_Acer": "Acer",
 
   "profile_login_prompt": "Please log in to view your profile.",
   "go_to_login_link": "Go to Login",
