--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -1,5 +1,13 @@
 {
   "welcome": "ຍິນດີຕ້ອນຮັບສູ່ແອັບພລິເຄຊັນຂອງພວກເຮົາ!",
+  "Home": "ໜ້າຫຼັກ",
+  "Cart": "ກະຕ່າ",
+  "Checkout": "ຊໍາລະເງິນ",
+  "Category": "ໝວດໝູ່",
+  "Products": "ສິນຄ້າ",
+  "profile": "ຂໍ້ມູນສ່ວນຕົວ",
+  "my_orders": "ຄໍາສັ່ງຊື້ຂອງຂ້ອຍ",
+  "Order-confirmation": "ລາຍລະອຽດຄໍາສັ່ງຊື້",
   "search_placeholder": "ຊອກຫາສິນຄ້າ...",
   "login_link_text": "ເຂົ້າສູ່ລະບົບ",
   "register_link_text": "ລົງທະບຽນ",
@@ -22,6 +30,8 @@
   "saving_button": "ກຳລັງບັນທຶກ...",
   "remove_image_button": "ລຶບຮູບພາບ",
   "edit_button": "ແກ້ໄຂ",
+  "out_of_stock": "ສິນຄ້າຫມົດ",
+  "stock_label": "ສິນຄ້າຍັງເຫຼືອ",
 
   "footer": {
     "contact_us": "ຕິດຕໍ່ພວກເຮົາ",
@@ -48,6 +58,8 @@
   "category_list_no_image": "ບໍ່ມີຮູບພາບ",
 
   "category_ແທັບເລັດ ແລະ ສະມາດໂຟນ": "ແທັບເລັດ ແລະ ສະມາດໂຟນ",
+  "category_iPads": "iPads",
+  "category_Galaxy Tab": "Galaxy Tab",
   "category_Electronics": "ເຄື່ອງໃຊ້ໄຟຟ້າ",
   "category_ຄອມພິວເຕີ": "ຄອມພິວເຕີ",
   "category_ແລັບທອບ": "ແລັບທອບ",
@@ -64,6 +76,22 @@
   "category_megadropdown_categories": "ໝວດໝູ່",
   "category_megadropdown_no_subcategories": "ບໍ່ມີໝວດໝູ່ຍ່ອຍ",
   "category_megadropdown_hover_prompt": "ເລື່ອນເມົ້າໃສ່ໝວດໝູ່ເພື່ອເບິ່ງໝວດໝູ່ຍ່ອຍ",
+
+  "category_Samsung": "Samsung",
+  "category_Apple": "Apple",
+  "category_OPPO": "OPPO",
+  "category_VIVO": "VIVO",
+  "category_Xiaomi": "Xiaomi",
+  "category_Asus": "Asus",
+  "category_Sony": "Sony",
+  "category_LG": "LG",
+  "category_Panasonic": "Panasonic",
+  "category_Philips": "Philips",
+  "category_Dell": "Dell",
+  "category_HP": "HP",
+  "category_MSI": "MSI",
+  "category_Lenovo": "Lenovo",
+  "category_Acer": "Acer",
 
   "profile_login_prompt": "ກະລຸນາເຂົ້າສູ່ລະບົບເພື່ອເບິ່ງໂປຣໄຟລ໌ຂອງທ່ານ.",
   "go_to_login_link": "ໄປທີ່ເຂົ້າສູ່ລະບົບ",
