Implement user notifications feature: add endpoints for fetching and marking notifications as read, enhance order placement and status update processes with customer notifications, and update frontend components to display notifications with localization support. Improve user experience with real-time updates and notification management in the header.

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -458,6 +458,12 @@
     "dropdown_empty": "No notifications",
     "dropdown_view_all": "View All Notifications"
   },
+  "notifications": "Notifications",
+  "No_notifications": "No notifications",
+  "view_all_notifications": "View All Notifications",
+  "notification.order_status_update": "Your order #{{orderId}} has been updated to {{status}}.",
+
+  "notification.customer_order_placed": "Your order #{{orderId}} has been placed successfully.",
 
   "Confirm": "Confirm",
   "Cancel": "Cancel",
