--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -126,6 +126,7 @@
   "created_label": "ສ້າງເມື່ອ",
   "items_label": "ລາຍການ",
   "total_label": "ທັງໝົດ",
+  "total_amount_label": "ລາຄາທັງໝົດ",
   "view_details_button": "ເບິ່ງລາຍລະອຽດ",
 
   "order_confirmation_title": "ຂອບໃຈສໍາລັບຄໍາສັ່ງຊື້ຂອງທ່ານ!",
@@ -136,7 +137,7 @@
   "order_id_label_details": "ລະຫັດຄໍາສັ່ງຊື້",
   "status_label_details": "ສະຖານະ",
   "payment_type_label": "ປະເພດການຊໍາລະເງິນ",
-  "shipping_label": "ທິ່ຢູ່",
+  "shipping_label": "ຂໍ້ມູນການຈັດສົ່ງ",
   "created_at_label": "ວັນທີສັ່ງຊຶ້",
   "items_label_details": "ລາຍການສັ່ງຊຶ້",
   "no_items_message": "ບໍ່ມີລາຍການ",
@@ -168,7 +169,7 @@
   "order_summary_title": "ສະຫຼຸບຄໍາສັ່ງຊື້",
   "checkout_subtotal_label": "ຍອດລວມ",
   "checkout_shipping_label": "ຄ່າຂົນສົ່ງ",
-  "checkout_total_label": "ທັງໝົດ",
+  "checkout_total_label": "ລາຄາທັງໝົດ",
   "place_order_button": "ສັ່ງຊື້",
   "processing_order_message": "ກຳລັງດຳເນີນການສັ່ງຊື້ຂອງທ່ານ...",
   "order_failed_message": "ສັ່ງຊື້ບໍ່ສຳເລັດ. ກະລຸນາລອງໃໝ່.",
@@ -240,7 +241,7 @@
     "uncategorized": "ບໍ່ມີໝວດໝູ່",
     "loading": "ກຳລັງໂຫຼດສິນຄ້າ...",
     "error": "ຂໍ້ຜິດພາດ: {{error}}",
-    "title": "ການຈັດການສິນຄ້າ",
+    "title": "ຈັດການຂໍ້ມູນສິນຄ້າ",
     "add_product_button": "ເພີ່ມສິນຄ້າໃໝ່",
     "edit_product_title": "ແກ້ໄຂສິນຄ້າ",
     "add_product_title": "ເພີ່ມສິນຄ້າໃໝ່",
@@ -284,7 +285,7 @@
     "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບໝວດໝູ່ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
     "loading": "ກຳລັງໂຫຼດໝວດໝູ່...",
     "error": "ຂໍ້ຜິດພາດ: {{error}}",
-    "title": "ການຈັດການໝວດໝູ່",
+    "title": "ຈັດການຂໍ້ມູນປະເພດສິນຄ້າ",
     "add_category_button": "ເພີ່ມໝວດໝູ່ໃໝ່",
     "close_modal_aria": "ປິດ",
     "edit_category_title": "ແກ້ໄຂໝວດໝູ່",
@@ -307,14 +308,14 @@
     "delete_failed": "ລຶບຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
     "fetch_details_failed": "ດຶງຂໍ້ມູນລາຍລະອຽດຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
     "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບຄຳສັ່ງຊື້ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
-    "title": "ການຈັດການຄຳສັ່ງຊື້ສິນຄ້າ",
+    "title": "ຈັດການຂໍ້ມູນການສັ່ງຊື້ສິນຄ້າ",
     "filter_status_label": "ກັ່ນຕອງຕາມສະຖານະ:",
     "all_statuses_option": "ທັງໝົດ",
     "loading": "ກຳລັງໂຫຼດຄຳສັ່ງຊື້...",
     "error": "{{error}}",
     "no_orders_found": "ບໍ່ພົບຄຳສັ່ງຊື້.",
     "table_header_order_id": "ລະຫັດຄຳສັ່ງຊື້",
-    "table_header_user": "ຜູ້ໃຊ້",
+    "table_header_user": "ຊື່ຜູ້ໃຊ້",
     "table_header_status": "ສະຖານະ",
     "table_header_created": "ວັນທີ",
     "table_header_items": "ສິນຄ້າ",
@@ -369,7 +370,7 @@
   },
 
   "customerManagement": {
-    "title": "ການຈັດການລູກຄ້າ",
+    "title": "ຂໍ້ມູນລູກຄ້າ",
     "searchPlaceholder": "ຄົ້ນຫາຕາມຊື່ຜູ້ໃຊ້ ຫຼື ອີເມວ...",
     "loadingCustomers": "ກຳລັງໂຫຼດລູກຄ້າ...",
     "error": "ຜິດພາດ: {{error}}",
@@ -422,16 +423,16 @@
 
   "adminSidebar": {
     "dashboardLink": "ໜ້າຫຼັກ",
-    "productsManagementLink": "ການຈັດການສິນຄ້າ",
-    "categoryManagementLink": "ການຈັດການໝວດໝູ່",
-    "ordersLink": "ການຈັດການການສັ່ງຊື້",
-    "salesLink": "ການຈັດການການຂາຍ",
-    "customerManagementLink": "ການຈັດການລູກຄ້າ",
+    "productsManagementLink": "ຈັດການຂໍ້ມູນສິນຄ້າ",
+    "categoryManagementLink": "ຈັດຂໍ້ມູນປະເພດສິນຄ້າ",
+    "ordersLink": "ຈັດການຂໍ້ມູນການສັ່ງຊື້",
+    "salesLink": "ຂໍ້ມູນການຂາຍ",
+    "customerManagementLink": "ຂໍ້ມູນລູກຄ້າ",
     "notificationsLink": "ການແຈ້ງເຕືອນ",
-    "userManagementLink": "ການຈັດການຜູ້ໃຊ້ລະບົບ"
+    "userManagementLink": "ຈັດການຂໍ້ມູນຜູ້ໃຊ້ລະບົບ"
   },
   "admin_user_management": {
-    "title": "ການຈັດການຜູ້ໃຊ້ລະບົບ",
+    "title": "ຈັດການຂໍ້ມູນຜູ້ໃຊ້ລະບົບ",
     "searchPlaceholder": "ຄົ້ນຫາຕາມຊື່ຜູ້ໃຊ້ ຫຼື ອີເມວ...",
     "loading": "ກຳລັງໂຫຼດຜູ້ໃຊ້ລະບົບ...",
     "error": "ຜິດພາດ: {{error}}",
@@ -467,7 +468,31 @@
 
   "notification.customer_order_placed": "ຄໍາສັ່ງຊື້ #{{orderId}} ຂອງທ່ານສຳເລັດແລ້ວ.",
 
+  "sort_by_price_title": "ຈັດລຽງຕາມລາຄາ",
+  "sort_none": "ບໍ່ມີ",
+  "sort_low_to_high": "ລາຄາ: ຕ່ຳສຸດຫາສູງສຸດ",
+  "sort_high_to_low": "ລາຄາ: ສູງສຸດຫາຕ່ຳສຸດ",
+
   "Confirm": "ຢືນຢັນ",
   "Cancel": "ຍົກເລີກ",
-  "Confirm Action": "ຢືນຢັນການກະທໍາ"
+  "Confirm Action": "ຢືນຢັນການກະທໍາ",
+
+  "view_invoice_button": "ເບິ່ງໃບບິນ",
+  "invoice_title": "ໃບບິນ",
+  "store_address": "ບ້ານ ວຽງໃໝ່, ນະຄອນຫຼວງພະບາງ, ແຂວງ ຫຼວງພະບາງ, ລາວ",
+  "print_invoice_button": "ພິມໃບບິນ",
+  "invoice_details_title": "ລາຍລະອຽດ",
+  "invoice_number_label": "ເລກທີ່ຄຳສັ່ງຊື້",
+  "invoice_date_label": "ວັນທີສັ່ງຊຶ້",
+  "bill_info": "ຂໍ້ມູນລູກຄ້າ",
+  "customer_name_label": "ຊື່ລູກຄ້າ",
+  "customer_email_label": "ອີເມວ",
+  "customer_phone_label": "ເບີໂທລະສັບ",
+  "shipping_address_label": "ທີ່ຢູ່",
+  "items_ordered_title": "ລາຍການສັ່ງຊຶ້",
+  "table_header_item": "ຊື່",
+  "table_header_qty": "ຈຳນວນ",
+  "table_header_unit_price": "ລາຄາ",
+  "table_header_total": " ລາຄາທັງໝົດ",
+  "thank_you_message": "ຂອບໃຈທ່ານທີ່ໃຊ້ບໍລິການ"
 }
