update API to check product availability before adding to cart or updating quantities

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -32,6 +32,7 @@
   "edit_button": "Edit",
   "out_of_stock": "Out of Stock",
   "stock_label": "Stock",
+  "Orders": "Orders",
 
   "footer": {
     "contact_us": "Contact Us",
