--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -32,6 +32,7 @@
   "edit_button": "ແກ້ໄຂ",
   "out_of_stock": "ສິນຄ້າຫມົດ",
   "stock_label": "ສິນຄ້າຍັງເຫຼືອ",
+  "Orders": "ຄຳສັ່ງຊື້",
 
   "footer": {
     "contact_us": "ຕິດຕໍ່ພວກເຮົາ",
